<resources>
    <string name="app_name">Apresentação Murilo</string>

    <string name="action_settings">Settings</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="visit">Visitar MEmp</string>

    <!--Conquistas-->
    <string name="conquista_titulo_1">2014 - 2015 - Trabalhei na empresa Pontual Sistemas, em Rondonópolis - MT</string>
    <string name="conquista_titulo_2">2015 - Freelancer</string>
    <string name="conquista_desc_1">Participei do desenvolvimento do aplicativo ePontual, aplicativo que tinha como objetivo
    realizar pedidos online entre farmácias e distribuidora.</string>
    <string name="conquista_desc_2">Elaborei e desenvolvi um aplicativo para controle de vendas de autônomos,
    chamado MEmp - Controle de vendas, com mais de 2.000 downloads na Google Play.</string>

    <!--Motivação-->
    <string name="motivacao_desc">\tPoder acordar todo dia e saber que meu código está lá me esperando, realizar um trabalho que todos sabemos o quanto complicado é,
        quebrar a cabeça, mas chegar ao fim e ter a felicidade de ver a aplicação rodando.
        Desenvolver algo que pode ajudar e facilitar a vida das pessoas e ser recompensado com feedbacks,
        positivos ou negativos, não importa, pois nada está totalmente completo, sempre deve-se tentar melhorar.</string>


    <!--Objetivos-->
    <string name="objetivo_titulo_1">1 - Graduação</string>
    <string name="objetivo_titulo_2">2 - Desenvolvedor Android</string>
    <string name="objetivo_titulo_3">3 - Desenvolvedor IOS</string>
    <string name="objetivo_desc_1">\tMeu principal objetivo é me graduar, para que possa entregar ainda mais conhecimento no trabalho.</string>
    <string name="objetivo_desc_2">\tEm setembro de 2014 quando comecei meu primeiro emprego, descobri o que realmente eu gostava de programar.
        Desenvolver em Java para Android é muito prazeroso, saber que seu aplicativo pode ser usado de qualquer lugar a qualquer momento, e pode facilitar a vida das pessoas.
        Espero sempre aprender mais, e me tornar um desenvolvedor Sênior daqui alguns anos.</string>
    <string name="objetivo_desc_3">\tSer um desenvolvedor IOS é um objetivo que está um pouco longe de ser alcançado, pois ainda não corri atrás,
        penso que devo dar um passo de cada vez, mas tenho confiança que aprenderei rápido como foi com o Android.</string>
</resources>
